# langchain-telnyx

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: chat_basic.py  chat_with_env.py  embeddings_basic.py
langchain_telnyx/: __init__.py
langchain_telnyx/chat_models/: __init__.py
langchain_telnyx/embeddings/: __init__.py
tests/unit_tests/chat_models/: test_chat_telnyx.py
tests/unit_tests/embeddings/: test_telnyx_embeddings.py
