[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-telnyx"
version = "1.0.0"
description = "An integration package connecting Telnyx and LangChain"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.3.0,<2.0.0",
    "langchain-openai>=0.3.0,<2.0.0",
    "openai>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://telnyx.com"
Documentation = "https://github.com/team-telnyx/langchain-telnyx"
Repository = "https://github.com/team-telnyx/langchain-telnyx"
Issues = "https://github.com/team-telnyx/langchain-telnyx/issues"

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "langchain-core",
    "langchain-openai",
]
lint = ["ruff>=0.4.0,<1.0.0"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
